Разобраться, почему вывод из ffmpeg не печатается в консоли приложения